--- a/frontend/src/screens/allCasesScreen/AllCasesScreen.scss
+++ b/frontend/src/screens/allCasesScreen/AllCasesScreen.scss
@@ -3,7 +3,6 @@
 .lw-allCasesScreen__row {
     @include m.row;
     width: 100%;
-    overflow: hidden;
 }
 
 .lw-allCasesScreen__search {
