--- a/frontend/src/screens/allCasesTypeScreen/AllCasesTypeScreen.scss
+++ b/frontend/src/screens/allCasesTypeScreen/AllCasesTypeScreen.scss
@@ -3,7 +3,6 @@
 .lw-allCasesTypeScreen__row {
     @include m.row;
     max-width: 100%;
-    overflow: hidden;
 }
 
 .lw-allCasesTypeScreen__search {
